# RedditSavedShiori

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs  reddit.rs  shiori.rs
