[package]
name = "RedditSavePostShiori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["cookies"] }
scraper = "0.14.0"
tokio = { version = "1.25.0", features = ["full"] }
dotenv = "0.15.0"